crates/gridwell-writer-rtf/tests/snapshots/snapshots__two-row-groups.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Country\cell
\pard\intbl\plain\b Value\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b North America}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain USA\cell
\pard\intbl\plain 1250\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Canada\cell
\pard\intbl\plain 420\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Europe}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Germany\cell
\pard\intbl\plain 890\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain France\cell
\pard\intbl\plain 610\cell
\row
}
