crates/gridwell-writer-rtf/tests/snapshots/snapshots__typed-values.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\plain\b Name\cell
\pard\intbl\plain\qr\b Score\cell
\pard\intbl\plain\b Active\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain Alice\cell
\pard\intbl\plain\qr 90\cell
\pard\intbl\plain yes\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain Bob\cell
\pard\intbl\plain\qr 85\cell
\pard\intbl\plain no\cell
\row
}
