crates/gridwell-writer-rtf/tests/snapshots/snapshots__unicode-cjk.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\pard{\b\fs36 \u-29527?\u22770?\u23455?\u32318?}\par
\par
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b \u22320?\u22495?\cell
\pard\intbl\b \u22770?\u19978?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl \u26481?\u20140?\cell
\pard\intbl 1,250\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl \u22823?\u-27094?\cell
\pard\intbl 980\cell
\row
}
