crates/gridwell-writer-rtf/tests/snapshots/snapshots__unicode-emoji.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Mood\cell
\pard\intbl\b Icon\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl happy\cell
\pard\intbl \u-10179?\u-8704?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl party\cell
\pard\intbl \u-10180?\u-8311?\u-10180?\u-8310?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl family\cell
\pard\intbl \u-10179?\u-9112?\u8205?\u-10179?\u-9111?\u8205?\u-10179?\u-9113?\u8205?\u-10179?\u-9114?\cell
\row
}
