crates/gridwell-writer-rtf/tests/snapshots/snapshots__unicode-rtl.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b \u1575?\u1604?\u1575?\u1587?\u1605?\cell
\pard\intbl\plain\b \u1575?\u1604?\u1602?\u1610?\u1605?\u1577?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain \u1605?\u1585?\u1581?\u1576?\u1575?\cell
\pard\intbl\plain \u1633?\u1634?\u1635?\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain \u1513?\u1500?\u1493?\u1501?\cell
\pard\intbl\plain 456\cell
\row
}
