crates/gridwell-writer-rtf/tests/snapshots/snapshots__wide-50-cols.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800\cellx12960\cellx15120\cellx17280\cellx19440\cellx21600\cellx23760\cellx25920\cellx28080\cellx30240\cellx32400\cellx34560\cellx36720\cellx38880\cellx41040\cellx43200\cellx45360\cellx47520\cellx49680\cellx51840\cellx54000\cellx56160\cellx58320\cellx60480\cellx62640\cellx64800\cellx66960\cellx69120\cellx71280\cellx73440\cellx75600\cellx77760\cellx79920\cellx82080\cellx84240\cellx86400\cellx88560\cellx90720\cellx92880\cellx95040\cellx97200\cellx99360\cellx101520\cellx103680\cellx105840\cellx108000
\pard\intbl\plain\b c0\cell
\pard\intbl\plain\b c1\cell
\pard\intbl\plain\b c2\cell
\pard\intbl\plain\b c3\cell
\pard\intbl\plain\b c4\cell
\pard\intbl\plain\b c5\cell
\pard\intbl\plain\b c6\cell
\pard\intbl\plain\b c7\cell
\pard\intbl\plain\b c8\cell
\pard\intbl\plain\b c9\cell
\pard\intbl\plain\b c10\cell
\pard\intbl\plain\b c11\cell
\pard\intbl\plain\b c12\cell
\pard\intbl\plain\b c13\cell
\pard\intbl\plain\b c14\cell
\pard\intbl\plain\b c15\cell
\pard\intbl\plain\b c16\cell
\pard\intbl\plain\b c17\cell
\pard\intbl\plain\b c18\cell
\pard\intbl\plain\b c19\cell
\pard\intbl\plain\b c20\cell
\pard\intbl\plain\b c21\cell
\pard\intbl\plain\b c22\cell
\pard\intbl\plain\b c23\cell
\pard\intbl\plain\b c24\cell
\pard\intbl\plain\b c25\cell
\pard\intbl\plain\b c26\cell
\pard\intbl\plain\b c27\cell
\pard\intbl\plain\b c28\cell
\pard\intbl\plain\b c29\cell
\pard\intbl\plain\b c30\cell
\pard\intbl\plain\b c31\cell
\pard\intbl\plain\b c32\cell
\pard\intbl\plain\b c33\cell
\pard\intbl\plain\b c34\cell
\pard\intbl\plain\b c35\cell
\pard\intbl\plain\b c36\cell
\pard\intbl\plain\b c37\cell
\pard\intbl\plain\b c38\cell
\pard\intbl\plain\b c39\cell
\pard\intbl\plain\b c40\cell
\pard\intbl\plain\b c41\cell
\pard\intbl\plain\b c42\cell
\pard\intbl\plain\b c43\cell
\pard\intbl\plain\b c44\cell
\pard\intbl\plain\b c45\cell
\pard\intbl\plain\b c46\cell
\pard\intbl\plain\b c47\cell
\pard\intbl\plain\b c48\cell
\pard\intbl\plain\b c49\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800\cellx12960\cellx15120\cellx17280\cellx19440\cellx21600\cellx23760\cellx25920\cellx28080\cellx30240\cellx32400\cellx34560\cellx36720\cellx38880\cellx41040\cellx43200\cellx45360\cellx47520\cellx49680\cellx51840\cellx54000\cellx56160\cellx58320\cellx60480\cellx62640\cellx64800\cellx66960\cellx69120\cellx71280\cellx73440\cellx75600\cellx77760\cellx79920\cellx82080\cellx84240\cellx86400\cellx88560\cellx90720\cellx92880\cellx95040\cellx97200\cellx99360\cellx101520\cellx103680\cellx105840\cellx108000
\pard\intbl\plain 0\cell
\pard\intbl\plain 1\cell
\pard\intbl\plain 2\cell
\pard\intbl\plain 3\cell
\pard\intbl\plain 4\cell
\pard\intbl\plain 5\cell
\pard\intbl\plain 6\cell
\pard\intbl\plain 7\cell
\pard\intbl\plain 8\cell
\pard\intbl\plain 9\cell
\pard\intbl\plain 10\cell
\pard\intbl\plain 11\cell
\pard\intbl\plain 12\cell
\pard\intbl\plain 13\cell
\pard\intbl\plain 14\cell
\pard\intbl\plain 15\cell
\pard\intbl\plain 16\cell
\pard\intbl\plain 17\cell
\pard\intbl\plain 18\cell
\pard\intbl\plain 19\cell
\pard\intbl\plain 20\cell
\pard\intbl\plain 21\cell
\pard\intbl\plain 22\cell
\pard\intbl\plain 23\cell
\pard\intbl\plain 24\cell
\pard\intbl\plain 25\cell
\pard\intbl\plain 26\cell
\pard\intbl\plain 27\cell
\pard\intbl\plain 28\cell
\pard\intbl\plain 29\cell
\pard\intbl\plain 30\cell
\pard\intbl\plain 31\cell
\pard\intbl\plain 32\cell
\pard\intbl\plain 33\cell
\pard\intbl\plain 34\cell
\pard\intbl\plain 35\cell
\pard\intbl\plain 36\cell
\pard\intbl\plain 37\cell
\pard\intbl\plain 38\cell
\pard\intbl\plain 39\cell
\pard\intbl\plain 40\cell
\pard\intbl\plain 41\cell
\pard\intbl\plain 42\cell
\pard\intbl\plain 43\cell
\pard\intbl\plain 44\cell
\pard\intbl\plain 45\cell
\pard\intbl\plain 46\cell
\pard\intbl\plain 47\cell
\pard\intbl\plain 48\cell
\pard\intbl\plain 49\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800\cellx12960\cellx15120\cellx17280\cellx19440\cellx21600\cellx23760\cellx25920\cellx28080\cellx30240\cellx32400\cellx34560\cellx36720\cellx38880\cellx41040\cellx43200\cellx45360\cellx47520\cellx49680\cellx51840\cellx54000\cellx56160\cellx58320\cellx60480\cellx62640\cellx64800\cellx66960\cellx69120\cellx71280\cellx73440\cellx75600\cellx77760\cellx79920\cellx82080\cellx84240\cellx86400\cellx88560\cellx90720\cellx92880\cellx95040\cellx97200\cellx99360\cellx101520\cellx103680\cellx105840\cellx108000
\pard\intbl\plain 100\cell
\pard\intbl\plain 101\cell
\pard\intbl\plain 102\cell
\pard\intbl\plain 103\cell
\pard\intbl\plain 104\cell
\pard\intbl\plain 105\cell
\pard\intbl\plain 106\cell
\pard\intbl\plain 107\cell
\pard\intbl\plain 108\cell
\pard\intbl\plain 109\cell
\pard\intbl\plain 110\cell
\pard\intbl\plain 111\cell
\pard\intbl\plain 112\cell
\pard\intbl\plain 113\cell
\pard\intbl\plain 114\cell
\pard\intbl\plain 115\cell
\pard\intbl\plain 116\cell
\pard\intbl\plain 117\cell
\pard\intbl\plain 118\cell
\pard\intbl\plain 119\cell
\pard\intbl\plain 120\cell
\pard\intbl\plain 121\cell
\pard\intbl\plain 122\cell
\pard\intbl\plain 123\cell
\pard\intbl\plain 124\cell
\pard\intbl\plain 125\cell
\pard\intbl\plain 126\cell
\pard\intbl\plain 127\cell
\pard\intbl\plain 128\cell
\pard\intbl\plain 129\cell
\pard\intbl\plain 130\cell
\pard\intbl\plain 131\cell
\pard\intbl\plain 132\cell
\pard\intbl\plain 133\cell
\pard\intbl\plain 134\cell
\pard\intbl\plain 135\cell
\pard\intbl\plain 136\cell
\pard\intbl\plain 137\cell
\pard\intbl\plain 138\cell
\pard\intbl\plain 139\cell
\pard\intbl\plain 140\cell
\pard\intbl\plain 141\cell
\pard\intbl\plain 142\cell
\pard\intbl\plain 143\cell
\pard\intbl\plain 144\cell
\pard\intbl\plain 145\cell
\pard\intbl\plain 146\cell
\pard\intbl\plain 147\cell
\pard\intbl\plain 148\cell
\pard\intbl\plain 149\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640\cellx10800\cellx12960\cellx15120\cellx17280\cellx19440\cellx21600\cellx23760\cellx25920\cellx28080\cellx30240\cellx32400\cellx34560\cellx36720\cellx38880\cellx41040\cellx43200\cellx45360\cellx47520\cellx49680\cellx51840\cellx54000\cellx56160\cellx58320\cellx60480\cellx62640\cellx64800\cellx66960\cellx69120\cellx71280\cellx73440\cellx75600\cellx77760\cellx79920\cellx82080\cellx84240\cellx86400\cellx88560\cellx90720\cellx92880\cellx95040\cellx97200\cellx99360\cellx101520\cellx103680\cellx105840\cellx108000
\pard\intbl\plain 200\cell
\pard\intbl\plain 201\cell
\pard\intbl\plain 202\cell
\pard\intbl\plain 203\cell
\pard\intbl\plain 204\cell
\pard\intbl\plain 205\cell
\pard\intbl\plain 206\cell
\pard\intbl\plain 207\cell
\pard\intbl\plain 208\cell
\pard\intbl\plain 209\cell
\pard\intbl\plain 210\cell
\pard\intbl\plain 211\cell
\pard\intbl\plain 212\cell
\pard\intbl\plain 213\cell
\pard\intbl\plain 214\cell
\pard\intbl\plain 215\cell
\pard\intbl\plain 216\cell
\pard\intbl\plain 217\cell
\pard\intbl\plain 218\cell
\pard\intbl\plain 219\cell
\pard\intbl\plain 220\cell
\pard\intbl\plain 221\cell
\pard\intbl\plain 222\cell
\pard\intbl\plain 223\cell
\pard\intbl\plain 224\cell
\pard\intbl\plain 225\cell
\pard\intbl\plain 226\cell
\pard\intbl\plain 227\cell
\pard\intbl\plain 228\cell
\pard\intbl\plain 229\cell
\pard\intbl\plain 230\cell
\pard\intbl\plain 231\cell
\pard\intbl\plain 232\cell
\pard\intbl\plain 233\cell
\pard\intbl\plain 234\cell
\pard\intbl\plain 235\cell
\pard\intbl\plain 236\cell
\pard\intbl\plain 237\cell
\pard\intbl\plain 238\cell
\pard\intbl\plain 239\cell
\pard\intbl\plain 240\cell
\pard\intbl\plain 241\cell
\pard\intbl\plain 242\cell
\pard\intbl\plain 243\cell
\pard\intbl\plain 244\cell
\pard\intbl\plain 245\cell
\pard\intbl\plain 246\cell
\pard\intbl\plain 247\cell
\pard\intbl\plain 248\cell
\pard\intbl\plain 249\cell
\row
}
